# RoboCup_Workspace

./: .gitignore
core/src/dbehavior/: .gitignore  CMakeLists.txt  README.md  behavior.md  deps.json  install.sh  package.xml  todo.md
core/src/dbehavior/config/: constant.yml  debug.yml  move.yml  role.yml
core/src/dbehavior/launch/: default.launch
core/src/dbehavior/src/: README.md  main.py  setup.py
core/src/dbehavior/src/dbehavior/btree/branch/: __init__.py  dynamic_guard_selector.py  parallel.py  random_selector.py  random_sequence.py  selector.py  sequence.py  until_see_ball.py
core/src/dbehavior/src/dbehavior/btree/core/: __init__.py  behavior_tree.py  blackboard.py  branch.py  decorator.py  leaf.py  loop_decorator.py  single_running_child_branch.py  task.py
core/src/dbehavior/src/dbehavior/btree/decorator/: __init__.py  always_fail.py  always_succeed.py  condition.py  invert.py  rand.py  (+5 more)
core/src/dbehavior/src/dbehavior/core/: __init__.py  dblackboard.py  role.py  skill.py
core/src/dbehavior/src/dbehavior/role/: __init__.py  defender.py  dummy.py  fake.py  foo.py  game.py  goal_keeper.py  goalie.py  normal.py  penalty_kicker.py  striker.py
core/src/dbehavior/src/dbehavior/skill/: __init__.py  align.py  approach_ball.py  approach_neo.py  assist.py  attack_ball.py  dribble.py  entry.py  euler.py  free_kick.py  get_image.py  goalie_body.py  joystick_ctl.py  keyboard_ctl.py  kick.py  localization.py  pace.py  patrol.py  penalty_shoot.py  seek_ball.py
core/src/dbehavior/src/dbehavior/util/: __init__.py  action_generator.py  calc_attack_point.py  log.py  mathutil.py  parameter.py  timer.py  util.py  vecpos.py  walk_to_point_solver.py
core/src/dnetwork/: CMakeLists.txt
core/src/dnetwork/include/dnetwork/: team.hpp
core/src/dnetwork/include/dnetwork/RoboCup/: RoboCupGameControlData.h
core/src/dnetwork/launch/: default.launch
core/src/dnetwork/src/: gamecontroller.cpp  team.cpp
core/src/dplanner/: CMakeLists.txt  README.md  package.xml
core/src/dplanner/include/: DWAPlanner.h
core/src/dplanner/launch/: default.launch
core/src/dplanner/src/: motion_hub_communicator.cpp
core/src/dvision/: .gitignore  CMakeLists.txt  deps.json  package.xml
core/src/dvision/camera/: bot1_ext_A.txt  bot1_in.txt  bot5_in.txt
core/src/dvision/config/: ext_points.yml  field_features.yml  localization.yml
core/src/dvision/docs/: HowToCalibrate.md
core/src/dvision/include/dvision/: ball_detector.hpp  ball_tracker.hpp  camera_settings.hpp  circle_detector.hpp  corner_detector.hpp  distortionModel.hpp  dvision.hpp  frame.hpp  goal_detector.hpp  gst_camera.hpp  gst_camera_impl.hpp  gst_utility.hpp  icamera.hpp  idetector.hpp  image_folder.hpp  ipm.hpp  jetnet_create_runner.hpp  kalman.hpp  line_classifier.hpp  math.hpp  object_detector.hpp  obstacle_detector.hpp  parameters.hpp  projection.hpp  ringbuffer.hpp  timer.hpp  v4l2_camera.hpp  video_file.hpp  vision_compass.hpp  vision_shared_info.hpp  zed_camera.hpp  zed_dvision.hpp
core/src/dvision/include/dvision/amcl/: amcl.hpp  kdtree.hpp  map.hpp  particle.hpp  pose.hpp  tools.hpp  types.hpp
core/src/dvision/include/dvision/cuda/: cuda_mapped_memory.h  cuda_rgb.h  cuda_utility.h  cuda_yuv.h
core/src/dvision/include/dvision/yolo/: common.hpp  cuda_utils.h  logging.h  macros.h  utils.hpp  yololayer.h  yolov5.hpp
core/src/dvision/launch/: 1.launch  2.launch  3.launch  4.launch  5.launch  6.launch  capture.launch  default.launch  detect.launch  ext_calib.launch  gdb.launch  record.launch  replay.launch  test_cameraDummy.launch  test_distortionModel.launch  test_exposure.launch  test_localization.launch  test_projection.launch  test_rec.launch  test_replay.launch  yolotest.launch  zed_capture.launch  zed_default.launch  zed_detect.launch  zed_ext_calib.launch
core/src/dvision/model/: hum.names
core/src/dvision/src/: dvision.cpp  main.cpp  parameters.cpp  zed_dvision.cpp
core/src/dvision/src/camera/calibration/: calibration.cpp  ext_calib.cpp  fisheyecalib.cpp  zed_ext_calib.cpp
core/src/dvision/src/camera/misc/: capture.cpp  detect.cpp  frame.cpp  gst_camera_impl.cpp  gst_utility.cpp  zed_capture.cpp  zed_detect.cpp
core/src/dvision/src/camera/projection/: distortionModel.cpp  ipm.cpp  projection.cpp
core/src/dvision/src/camera/source/: gst_camera.cpp  image_folder.cpp  v4l2_camera.cpp  video_file.cpp  zed_camera.cpp
core/src/dvision/src/cuda/: cuda_rgb.cu  cuda_yuv_nv12.cu  cuda_yuv_yuyv.cu  cuda_yuv_yv12.cu
core/src/dvision/src/detector/: ball_detector.cpp  circle_detector.cpp  corner_detector.cpp  goal_detector.cpp  line_classifier.cpp  object_detector.cpp  obstacle_detector.cpp
core/src/dvision/src/localization/amcl/: amcl.cpp  kdtree.cpp  map.cpp  particle.cpp  pose.cpp
core/src/dvision/src/tools/: ball_tracker.cpp  kalman.cpp  vision_compass.cpp
core/src/dvision/src/yolo/: common.cpp  utils.cpp  yolov5.cpp
core/src/dvision/test/: test_amcl.cpp  test_auto_exposure.cpp  test_cameraDummy.cpp  test_distortionModel.cpp  test_frame.cpp  test_frameRecv.cpp  test_frameSend.cpp  test_kalman.cpp  test_projection.cpp  test_ringbuffer.cpp  test_undist.cpp  test_videowriter.cpp  yolo_test.cpp
lib/src/dancer-geometry/: CMakeLists.txt  README.md  deps.json  package.xml
lib/src/dancer-geometry/include/dancer_geometry/: angle.hpp  line_segment.hpp  point.hpp  utils.hpp
lib/src/dancer-geometry/src/: angle.cpp  line_segment.cpp  point.cpp  utils.cpp
lib/src/dancer-geometry/test/: utest.cpp
lib/src/dcommon/: CMakeLists.txt  README.md  deps.json  package.xml
lib/src/dcommon/include/dcommon/: dcommon.hpp  profiler.hpp  timer.hpp  util.hpp
lib/src/dcommon/src/: profiler.cpp  util.cpp
lib/src/dcommon/test/: utest.cpp
lib/src/dmsgs/: .gitignore  CMakeLists.txt  README.md  deps.json  package.xml
lib/src/dmsgs/msg/: BehaviorInfo.msg  BodyCommand.msg  FeetPressure.msg  FieldFeature.msg  GCInfo.msg  IMUDebug.msg  MotionDebugInfo.msg  MotionInfo.msg  ParticleMsg.msg  ServerInfo.msg  TeamInfo.msg  VisionInfo.msg
lib/src/dmsgs/srv/: ResetParticlePoint.srv  ResetParticleTouchLine.srv  ToggleAMCL.srv
(+91 files in other folders)
