<?xml version="1.0"?>
<package>
  <name>dbehavior</name>
  <version>0.0.0</version>
  <description>behavior framework</description>
  <maintainer email="xxdsox@gmail.com">Yusu Pan</maintainer>
  <author email="mwx36mwx@gmail.com">Wenxing Mei</author>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dmsgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>dmsgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
